--- a/register.html
+++ b/register.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-
 <meta charset = "UTF-8">
-<title>Sembako</title>
+<title>register</title>
 <link rel = "stylesheet" type = "text/css" href = "mystyle.css">
 
 </head>
-
 <body>
 <div class = "all">
 <div class = "logo">
@@ -29,12 +25,22 @@
 	<div class = "menu">SHOPPING BAG</div>
 	<a href = "login.html">
 	<div class = "menu">LOGIN </div>
-	</a>
+	</a> 
 	<a href = "register.html">
 	<div class = "menu">REGISTER</div>
 	</a>
 </div>
 <div class = "page">
+<div class = "formregis">
+<form name="regis" action="html_form_action.asp" method="get">
+Username : <input type="text" name="usename"><br><br>
+Password : <input type="password" name="pwd"><br><br>
+Confirm Password : <input type="password" name="cpwd"><br><br>
+Nama Lengkap : <input type="text" name="nama"><br><br>
+Email : <input type="text" name="email"><br><br>
+<input type="submit" value="Register">
+</form>
+</div>
 </div>
 </div>
 </body>
